--- a/WebApplication1/Areas/coadmin/Views/facilidades/disponibles.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/disponibles.cshtml
@@ -50,6 +50,17 @@
         <!-- end back button -->
 
         <div class="row">
+         @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card m-b-30">
                     <div class="card-body">
@@ -57,15 +68,9 @@
                             <div class="col-md-6">
                                 <h5 class="d-inline-block">Listado</h5>
                             </div>
-                            <div class="col-md-6 mb-1">
-                                @if (Session["CURRENT_COMU"] != null)
-                                {
+                            <div class="col-md-6 mb-1">                               
                                     <a href="@Url.Action("agregar", "facilidades", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar nuevo</button></a>
-                                }
-                                else
-                                {
-                                    <button type="button" disabled class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar nuevo</button>
-                                }
+                                
                             </div>
                         </div>
 
