--- a/WebApplication1/Areas/coadmin/Views/facilidades/solicitudes.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/solicitudes.cshtml
@@ -60,6 +60,17 @@
         <!-- end back button -->
 
         <div class="row">
+         @if (ViewBag.msgError != null)
+            {
+            <div class="col-12">
+                <div class="alert alert-danger" role="alert">
+                    <strong>Error: </strong> @ViewBag.msgError
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            </div>
+            }
             <div class="col-12">
                 <div class="card m-b-30">
                     <div class="card-body">
@@ -67,15 +78,8 @@
                             <div class="col-md-6">
                                 <h5 class="d-inline-block">Listado</h5>
                             </div>
-                            <div class="col-md-6 mb-1">
-                                @if (Session["CURRENT_COMU"] != null)
-                                {
-                                    <a href="@Url.Action("agregar", "facilidades", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar nuevo</button></a>
-                                }
-                                else
-                                {
-                                    <button type="button" disabled class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar nuevo</button>
-                                }
+                            <div class="col-md-6 mb-1">                               
+                                    <a href="@Url.Action("agregar", "facilidades", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar nuevo</button></a>                                                             
                             </div>
                         </div>
                         <div class="table-responsive">
@@ -108,9 +112,12 @@
                                                 {
                                                     <button  onclick="onDeactiveSolicitud(this)"  data-id="@item.id"    type="button" class="btn btn-danger waves-effect waves-light btn-sm" >Rechazado</button>
                                                 }
-                                                else
+                                                else if(item.status == 2)
                                                 {
-                                                    <button onclick="onActiveSolicitud(this)" data-id="@item.id"  type="button"  class="btn btn-warning waves-effect waves-light btn-sm mb-1">Aprobado</button>
+                                                    <button onclick="onActiveSolicitud(this)" data-id="@item.id"  type="button"  class="btn btn-warning waves-effect waves-light btn-sm mb-1">Por confirmar</button>
+                                                }
+                                                else{
+                                                     <button onclick="onActiveSolicitud(this)" data-id="@item.id"  type="button"  class="btn btn-primary waves-effect waves-light btn-sm mb-1">Aprobado</button>
                                                 }
                                              
                                             </td>
