validaciones en blog

--- a/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
@@ -1002,6 +1002,10 @@
                 "order": [[2, "desc"]]
             });
 
+             $('#faciSolicitudes').DataTable({
+                "order": [[0, "desc"]]
+            });
+
             $('#tableComunities').DataTable({
                 "ordering": false
             });
