--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/agregarblog.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/agregarblog.cshtml
@@ -60,14 +60,14 @@
                             <div class="form-group row">
                                 <label for="example-email-input-1" class="col-sm-3 col-form-label">Título</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="" name="title"
+                                    <input maxlength="90" class="form-control" type="text" value="" name="title"
                                            data-toggle="tooltip" title="Título descriptivo del blog"
                                            placeholder="Título" id="example-email-input-1" required />
-                                    @*<small class="form-text text-muted">Título descriptivo del blog</small>*@
+                                    <small class="form-text text-muted">Título descriptivo del blog</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
-                            <div class="form-group row">
+                            @*<div class="form-group row">
                                 <label for="example-email-input-2" class="col-sm-3 col-form-label">Autor</label>
                                 <div class="col-sm-9">
                                     <input class="form-control" type="text" value="" name="author"
@@ -76,7 +76,7 @@
                                     <small class="form-text text-muted">Autor descriptivo del blog</small>
                                 </div>
                             </div>
-                            <div class="form-divider"></div>
+                            <div class="form-divider"></div>*@
                             <div class="form-group row">
                                 <label for="example-email-input-3" class="col-sm-3 col-form-label">Contenido</label>
                                 <div class="col-sm-9">
