--- a/WebApplication1/Areas/coadmin/Views/comunicaciones/blog.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/comunicaciones/blog.cshtml
@@ -40,6 +40,18 @@
             </div>
         </div><!--end row-->
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
+
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
@@ -82,7 +94,7 @@
                                                             data-toggle="tooltip" data-placement="top" title="Ver">
                                                         <i class="mdi mdi-eye"></i>
                                                     </button>
-                                                </a>                                                
+                                                </a>
                                             </td>
                                         </tr>
                                     }
