--- a/WebApplication1/Areas/coadmin/Views/facilidades/solicitudes.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/facilidades/solicitudes.cshtml
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                         <div class="table-responsive">
-                            <table id="dataTable-tareas-completadas" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+                            <table id="faciSolicitudes" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead class="header-table">
                                     <tr>
                                         <th class="f-b">Fecha de solicitud</th>
@@ -101,7 +101,7 @@
                                     @foreach (var item in Model.efacList)
                                     {
                                         <tr>
-                                            <td>@Convert.ToDateTime(item.created_at).ToString("MM/dd/yyyy")</td>
+                                            <td><span style="display:none!important">@Convert.ToDateTime(item.created_at).ToString("yyyy/MM/dd HH:mm")</span>@Convert.ToDateTime(item.created_at).ToString("MM/dd/yyyy")</td>
                                             <td>@item.first_name</td>
                                             <td>@item.description.</td>
                                             <td class="text-center">@DateTime.Today.Add(item.start_time).ToString("hh:mm tt")</td>
@@ -110,7 +110,7 @@
                                             <td class="text-center">
                                                 @if (item.status == 1)
                                                 {
-                                                    <button  onclick="onDeactiveSolicitud(this)"  data-id="@item.id"    type="button" class="btn btn-danger waves-effect waves-light btn-sm" >Rechazado</button>
+                                                    <button  onclick="onActiveSolicitud(this)"  data-id="@item.id"    type="button" class="btn btn-danger waves-effect waves-light btn-sm" >Rechazado</button>
                                                 }
                                                 else if(item.status == 2)
                                                 {
