--- a/WebApplication1/Areas/coadmin/Views/eventos/otros.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/eventos/otros.cshtml
@@ -62,6 +62,17 @@
         </div>
         <!-- end back button -->
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
@@ -69,15 +80,9 @@
                             <div class="col-md-6">
                                 <h5 class="d-inline-block">Eventos registrados</h5>
                             </div>
-                            <div class="col-md-6 mb-1">
-                                @if (Session["CURRENT_COMU"] != null)
-                                {
-                                    <a href="@Url.Action("agregar", "eventos", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar evento</button></a>
-                                }
-                                else
-                                {
-                                    <a><button disabled type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar evento</button></a>
-                                }
+                            <div class="col-md-6 mb-1">                              
+                                    <a href="@Url.Action("agregar", "eventos", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar evento</button></a>                             
+                                
                             </div>
                         </div>
                         <div class="row">
