--- a/WebApplication1/Areas/coadmin/Views/eventos/registrados.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/eventos/registrados.cshtml
@@ -65,6 +65,17 @@
         <!-- end back button -->
 
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
@@ -73,14 +84,7 @@
                                 <h5 class="d-inline-block">Listado de eventos</h5>
                             </div>
                             <div class="col-md-6 mb-1">
-                                @if (Session["CURRENT_COMU"] !=null)
-                                {
-                                    <a href="@Url.Action("agregar", "eventos", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar evento</button></a>
-                                }
-                                else
-                                {
-                                    <a><button disabled type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar evento</button></a>
-                                }
+                                <a href="@Url.Action("agregar", "eventos", new { area = "coadmin" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left">Agregar evento</button></a>
 
                             </div>
                         </div>
@@ -101,27 +105,27 @@
                                 <tbody>
                                     @foreach (var item in Model.eventList)
                                     {
-                                    <tr>
-                                        <td>@item.name</td>
-                                        <td>@Convert.ToDateTime(item.event_date).ToString("MM/dd/yyyy")</td>
-                                        <td>@Convert.ToDateTime(item.event_date).ToString("hh:mm tt")</td>
-                                        <td>@item.place</td>
-                                        <td>@item.description.</td>
-                                        @*<td>@item.note.</td>*@
+                                        <tr>
+                                            <td>@item.name</td>
+                                            <td>@Convert.ToDateTime(item.event_date).ToString("MM/dd/yyyy")</td>
+                                            <td>@Convert.ToDateTime(item.event_date).ToString("hh:mm tt")</td>
+                                            <td>@item.place</td>
+                                            <td>@item.description.</td>
+                                            @*<td>@item.note.</td>*@
 
-                                    <td class="text-center">
-                                        @if (item.is_active == true)
-                                        {
-                                            <button onclick="onActiveEvento(this)" data-id="@item.id" type="button" class="btn btn-danger waves-effect waves-light btn-sm">Inactivo</button>
-                                        }
-                                        else
-                                        {
-                                            <button onclick="onDeactiveEvento(this)" data-id="@item.id" type="button" class="btn btn-primary waves-effect waves-light btn-sm">Activo</button>
+                                            <td class="text-center">
+                                                @if (item.is_active == true)
+                                                {
+                                                    <button onclick="onActiveEvento(this)" data-id="@item.id" type="button" class="btn btn-danger waves-effect waves-light btn-sm">Inactivo</button>
+                                                }
+                                                else
+                                                {
+                                                    <button onclick="onDeactiveEvento(this)" data-id="@item.id" type="button" class="btn btn-primary waves-effect waves-light btn-sm">Activo</button>
 
-                                        }
-                                    </td>
-                                        <td class="text-center"><a href="@Url.Action("editar", "eventos", new { area = "coadmin", editID = item.id })"><button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1" data-toggle="tooltip" data-placement="top" title="Editar"><i class="mdi mdi-lead-pencil"></i></button></a><a href="#"><button type="button" onclick="onDeleteEvent(this)" data-id="@item.id" class="btn btn-danger waves-effect waves-light btn-sm mb-1" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="mdi mdi-delete"></i></button></a></td>
-                                    </tr>
+                                                }
+                                            </td>
+                                            <td class="text-center"><a href="@Url.Action("editar", "eventos", new { area = "coadmin", editID = item.id })"><button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1" data-toggle="tooltip" data-placement="top" title="Editar"><i class="mdi mdi-lead-pencil"></i></button></a><a href="#"><button type="button" onclick="onDeleteEvent(this)" data-id="@item.id" class="btn btn-danger waves-effect waves-light btn-sm mb-1" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="mdi mdi-delete"></i></button></a></td>
+                                        </tr>
                                     }
                                 </tbody>
                             </table>
