eventos y correccion en facilidades

--- a/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/Shared/_Layout.cshtml
@@ -1004,6 +1004,10 @@
 
              $('#faciSolicitudes').DataTable({
                 "order": [[0, "desc"]]
+             });
+
+            $('#eventsR').DataTable({
+                "order": [[1, "desc"]]
             });
 
             $('#tableComunities').DataTable({
